feat: add release-please action
for managing releases

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,6 +22,7 @@ jobs:
       - run: bun install
       - run: bun run lint
       - run: bun run build
+      - run: bun run pretest
 
   # publish the extension to marketplaces
   publish:
