--- a/package.json
+++ b/package.json
@@ -136,7 +136,6 @@
     "js-yaml": "^4.1.0",
     "lefthook": "^1.10.7",
     "ovsx": "^0.10.1",
-    "standard-version": "^9.5.0",
     "@vscode/test-cli": "*",
     "@vscode/test-electron": "*",
     "vscode-tmgrammar-test": "*",
@@ -149,16 +148,13 @@
     "watch": "bun run build-base --sourcemap --watch",
     "postinstall": "lefthook install",
     "clean": "rm -rd dist",
-    "prerelease": "bun install && bun run lint && bun run clean && bun run build",
-    "release": "standard-version",
-    "postrelease": "git push --follow-tags",
     "prepackage": "rm -f *.vsix",
     "package": "bun run build && bunx vsce package",
     "publish:ovsx": "bunx ovsx publish *.vsix --pat '$OVS_PAT'",
     "publish:vsce": "bunx vsce publish",
     "publish": "bun run package && bun run publish:vsce && bun run publish:ovsx",
-    "test:grammar": "bun run build && vscode-tmgrammar-snap 'syntaxes/tests/*.nix'",
-    "test": "bun run test:grammar && vscode-test",
+    "pretest": "bun run build && vscode-tmgrammar-snap 'syntaxes/tests/*.nix'",
+    "test": "vscode-test",
     "lint": "bun x biome check --write src"
   },
   "dependencies": {
