fix: update release config

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -15,9 +15,5 @@ jobs:
     steps:
       - uses: googleapis/release-please-action@v4
         with:
-          # this is a built-in strategy in release-please, see "Action Inputs"
-          # for more options
-          release-type: node
-          include-v-in-tag: true
-          bump-patch-for-minor-pre-major: true
-          bump-minor-pre-major: true
+          config-file: release-please-config.json
+          manifest-file: .release-please-manifest.json
