--- a/release-please-config.json
+++ b/release-please-config.json
@@ -4,6 +4,7 @@
     "bump-minor-pre-major": true,
     "include-v-in-tag": false,
     "bump-patch-for-minor-pre-major": true,
+    "include-component-in-tag": false,
     "packages": {
         ".": {}
     }
