--- a/release-please-config.json
+++ b/release-please-config.json
@@ -2,7 +2,7 @@
     "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
     "release-type": "node",
     "bump-minor-pre-major": true,
-    "include-v-in-tag": false,
+    "include-v-in-tag": true,
     "bump-patch-for-minor-pre-major": true,
     "include-component-in-tag": false,
     "packages": {
