--- a/package.json
+++ b/package.json
@@ -128,18 +128,18 @@
     "@commitlint/config-conventional": "^19.6.0",
     "@types/bun": "latest",
     "@types/command-exists": "^1.2.3",
-    "@types/node": "^22.10.3",
+    "@types/node": "^22.10.7",
     "@types/vscode": "^1.96.0",
     "@vscode/vsce": "^3.2.1",
     "esbuild": "^0.24.2",
     "globals": "^15.14.0",
     "js-yaml": "^4.1.0",
-    "lefthook": "^1.10.7",
+    "lefthook": "^1.10.8",
     "ovsx": "^0.10.1",
-    "@vscode/test-cli": "*",
-    "@vscode/test-electron": "*",
-    "vscode-tmgrammar-test": "*",
-    "typescript": "^5.7.2"
+    "@vscode/test-cli": "^0.0.10",
+    "@vscode/test-electron": "^2.4.1",
+    "vscode-tmgrammar-test": "^0.1.3",
+    "typescript": "^5.7.3"
   },
   "scripts": {
     "prebuild": "js-yaml syntaxes/nix.YAML-tmLanguage > syntaxes/nix.tmLanguage.json && js-yaml syntaxes/injection.yml > syntaxes/injection.json",
