ci: release-PR using standard-version

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,35 +1,14 @@
-name: VSCode CI
+name: publish the extension to marketplaces
 
 on:
   push:
-    branches: [master, main]
     tags:
       - "v*"
-  pull_request:
-    branches: [master, main]
 
 jobs:
-  build:
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-
-    steps:
-      - uses: actions/checkout@v4
-      - uses: oven-sh/setup-bun@v2
-      - run: bun install
-      - run: bun run lint
-      - run: bun run build
-      - run: bun run pretest
-
-  # publish the extension to marketplaces
   publish:
-    # run after lint passes
-    needs: build
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/v')
+    if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v4
       - uses: oven-sh/setup-bun@v2
