--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,10 +1,8 @@
-name: VSCode CI
+name: Tests
 
 on:
   push:
     branches: [master, main]
-    tags:
-      - "v*"
   pull_request:
     branches: [master, main]
 
