--- a/.github/workflows/release-pr.yml
+++ b/.github/workflows/release-pr.yml
@@ -24,7 +24,7 @@ jobs:
       id: check_commit
       run: |
         commit_message=$(git log -1 --pretty=%B)
-        if [[ "$commit_message" =~ ^chore\(release\):\ ([0-9]+\.[0-9]+\.[0-9]+)$ ]]; then
+        if [[ "$commit_message" =~ ^chore\(release\):\ ([.0-9]+).* ]]; then
           version="${BASH_REMATCH[1]}"
           echo "is_release=true" >> $GITHUB_OUTPUT
           echo "version=$version" >> $GITHUB_OUTPUT
