chore: update tasks

--- a/package.json
+++ b/package.json
@@ -147,8 +147,8 @@
     "clean": "rm -rd dist",
     "prepackage": "rm -f *.vsix",
     "package": "bun run build && bun run vsce package --no-dependencies",
-    "publish:ovsx": "bunx ovsx publish *.vsix --pat '$OVS_PAT'",
-    "publish:vsce": "bunx vsce publish",
+    "publish:ovsx": "ovsx publish *.vsix --pat '$OVS_PAT'",
+    "publish:vsce": "vsce publish",
     "publish": "bun run package && bun run publish:vsce && bun run publish:ovsx",
     "pretest": "bun run build && vscode-tmgrammar-snap 'syntaxes/tests/*.nix'",
     "test": "vscode-test",
