--- a/.github/workflows/release-pr.yml
+++ b/.github/workflows/release-pr.yml
@@ -47,12 +47,12 @@ jobs:
     - name: tag current package version and push
       if: steps.check_commit.outputs.is_release == 'true'
       run: |
-        git tag v${{ steps.check_commit.outputs.version }}
-        git push --tags
+        git tag v${{ steps.check_commit.outputs.version }} || true
+        git push --tags || true
         bun install --frozen-lockfile
         bun run package
-        bun run ovsx publish *.vsix --pat ${{ secrets.OPEN_VSX_TOKEN }}
-        bun run vsce publish -p ${{ secrets.VS_MARKETPLACE_TOKEN }}
+        bun run ovsx publish *.vsix --pat ${{ secrets.OPEN_VSX_TOKEN }} || true
+        bun run vsce publish -p ${{ secrets.VS_MARKETPLACE_TOKEN }} || true
         gh release create v${{ steps.check_commit.outputs.version }} nix-ide*.vsix --title "v${{ steps.check_commit.outputs.version }}" --notes "Release v${{ steps.check_commit.outputs.version }}"
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
