feat: auto-indent on pressed enter

--- a/language-configuration.json
+++ b/language-configuration.json
@@ -106,5 +106,55 @@
             "end": "^\\s*#\\s*#?endregion\\b"
         }
     },
+    "onEnterRules": [
+        {
+            "beforeText": "^.*\\blet\\s*$",
+            "afterText": "\\s*in\\b.*$",
+            "action": {
+                "indent": "indentOutdent"
+            }
+        },
+        {
+            "beforeText": "^.*\\bif\\s*$",
+            "afterText": "\\s*then\\b.*$",
+            "action": {
+                "indent": "indentOutdent"
+            }
+        },
+        {
+            "beforeText": "^.*\\bthen\\s*$",
+            "afterText": "\\s*else\\b.*$",
+            "action": {
+                "indent": "indentOutdent"
+            }
+        },
+        {
+            "beforeText": "^.*''\\s*$",
+            "afterText": "\\s*''.*$",
+            "action": {
+                "indent": "indentOutdent"
+            }
+        },
+        {
+            "beforeText": "^.*/\\*\\*\\s*$",
+            "afterText": "\\s*\\*/.*$",
+            "action": {
+                "indent": "indentOutdent"
+            }
+        },
+        {
+            "beforeText": "^.*(?:=|/\\*\\*)\\s*$",
+            "action": {
+                "indent": "indent"
+            }
+        },
+        {
+            // NOTE: `in` is not included on purpose, because nixfmt also doesn't indent after it.
+            "beforeText": "^.*\\b(?:let|with|if|then|else|rec|or|and|assert|inherit)\\s*$",
+            "action": {
+                "indent": "indent"
+            }
+        },
+    ],
     "wordPattern": "(-?\\d*\\.\\d\\w*)|((~|[^\\`\\~\\!\\@\\#\\%\\^\\&\\*\\(\\)\\=\\+\\[\\{\\]\\}\\\\\\|\\;\\:\\'\\\"\\,\\<\\>\\/\\?\\s]+)/[^\\`\\~\\!\\@\\#\\%\\^\\&\\*\\(\\)\\=\\+\\[\\{\\]\\}\\\\\\|\\;\\:\\'\\\"\\,\\<\\>\\?\\s]+)|([^\\`\\~\\!\\@\\#\\%\\^\\&\\*\\(\\)\\=\\+\\[\\{\\]\\}\\\\\\|\\;\\:\\'\\\"\\,\\.\\<\\>\\/\\?\\s]+)"
 }
