--- a/language-configuration.json
+++ b/language-configuration.json
@@ -143,7 +143,7 @@
             }
         },
         {
-            "beforeText": "^.*(?:=|/\\*\\*)\\s*$",
+            "beforeText": "^.*(?:=|/\\*\\*|'')\\s*$",
             "action": {
                 "indent": "indent"
             }
