fix: nix file icon off center in VS code
file icon is changed from png to svg
svg icon is offset by 20% to the right by changing viewBox

--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
           ".nix"
         ],
         "icon": {
-          "dark": "images/icon.png",
-          "light": "images/icon.png"
+          "dark": "images/icon.svg",
+          "light": "images/icon.svg"
         },
         "configuration": "./language-configuration.json"
       }
