feat: set explorer.fileNesting for flake.lock

--- a/package.json
+++ b/package.json
@@ -133,6 +133,9 @@
       "[nix]": {
         "editor.insertSpaces": true,
         "editor.tabSize": 2
+      },
+      "explorer.fileNesting.patterns": {
+        "flake.nix": "flake.lock"
       }
     },
     "commands": [
