fix: vscode debug launch
* Fixed launch task hanging on npmWatch.
* Removed watch command, it doesn't really work.
* Refactor package.json scripts, so there's only 1 "build" command,
  and we don't call the wrong one by mistake skipping "prebuild" script.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "type": "extensionHost",
             "request": "launch",
             "runtimeExecutable": "${execPath}",
-            "preLaunchTask": "npmWatch",
+            "preLaunchTask": "Bun Debug Build",
             "args": [
                 "--extensionDevelopmentPath=${workspaceFolder}"
             ],
