--- a/package.json
+++ b/package.json
@@ -255,17 +255,15 @@
   },
   "scripts": {
     "prebuild": "mkdir -p dist && js-yaml syntaxes/nix.YAML-tmLanguage > dist/nix.tmLanguage.json && js-yaml syntaxes/injection.yml > dist/injection.json",
-    "build-base": "bun build src/extension.ts --outdir=dist --external=vscode --target=node --format=cjs",
-    "build": "bun run build-base --sourcemap --minify",
-    "watch": "bun run build-base --sourcemap --watch",
+    "build": "bun build src/extension.ts --outdir=dist --external=vscode --target=node --format=cjs",
     "postinstall": "lefthook install",
     "clean": "rm -rd dist",
     "prepackage": "rm -f *.vsix",
-    "package": "bun run build && bun run vsce package --no-dependencies",
+    "package": "bun run build --minify && bun run vsce package --no-dependencies",
     "publish:ovsx": "ovsx publish *.vsix --pat '$OVS_PAT'",
     "publish:vsce": "vsce publish",
     "publish": "bun run package && bun run publish:vsce && bun run publish:ovsx",
-    "pretest": "bun run build && vscode-tmgrammar-snap 'syntaxes/tests/*.nix'",
+    "pretest": "bun run build --sourcemap && vscode-tmgrammar-snap 'syntaxes/tests/*.nix'",
     "test": "vscode-test",
     "lint": "bun x biome check --write src"
   },
