--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
         },
         "nix.enableLanguageServer": {
           "type": "boolean",
-          "default": false,
+          "default": true,
           "description": "Use LSP instead of nix-instantiate and the formatter configured via `nix.formatterPath`."
         },
         "nix.serverSettings": {
