--- a/package.json
+++ b/package.json
@@ -145,6 +145,9 @@
       },
       "explorer.fileNesting.patterns": {
         "flake.nix": "flake.lock"
+      },
+      "files.associations": {
+        "flake.lock": "json"
       }
     },
     "commands": [
