--- a/package.json
+++ b/package.json
@@ -256,20 +256,22 @@
   "devDependencies": {
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
+    "@types/bun": "^1.3.0",
     "@types/command-exists": "^1.2.3",
     "@types/node": "^24.0.3",
     "@types/vscode": "^1.96.0",
+    "@vscode/test-cli": "^0.0.11",
+    "@vscode/test-electron": "^2.5.2",
     "@vscode/vsce": "^3.5.0",
     "js-yaml": "^4.1.0",
     "lefthook": "^1.11.14",
     "ovsx": "^0.10.4",
-    "@vscode/test-cli": "^0.0.11",
-    "@vscode/test-electron": "^2.5.2",
+    "typescript": "^5.8.3",
     "vscode-tmgrammar-test": "^0.1.3",
-    "typescript": "^5.8.3"
+    "yaml": "^2.8.1"
   },
   "scripts": {
-    "prebuild": "mkdir -p dist && js-yaml syntaxes/nix.YAML-tmLanguage > dist/nix.tmLanguage.json && js-yaml syntaxes/injection.yml > dist/injection.json",
+    "prebuild": "mkdir -p dist && bun run scripts/ts_to_tmljson.ts && js-yaml syntaxes/injection.yml > dist/injection.json",
     "build": "bun build src/extension.ts --outdir=dist --external=vscode --target=node --format=cjs",
     "postinstall": "lefthook install",
     "clean": "rm -rd dist",
