--- a/package.json
+++ b/package.json
@@ -266,6 +266,7 @@
     "js-yaml": "^4.1.0",
     "lefthook": "^1.11.14",
     "ovsx": "^0.10.4",
+    "tmlanguage-generator": "^0.6.4",
     "typescript": "^5.8.3",
     "vscode-tmgrammar-test": "^0.1.3",
     "yaml": "^2.8.1"
