--- a/package.json
+++ b/package.json
@@ -263,16 +263,16 @@
     "@commitlint/config-conventional": "^20.0.0",
     "@types/bun": "^1.3.0",
     "@types/command-exists": "^1.2.3",
-    "@types/node": "^24.0.3",
-    "@types/vscode": "^1.96.0",
+    "@types/node": "^24.9.1",
+    "@types/vscode": "^1.105.0",
     "@vscode/test-cli": "^0.0.11",
     "@vscode/test-electron": "^2.5.2",
-    "@vscode/vsce": "^3.5.0",
+    "@vscode/vsce": "^3.6.2",
     "js-yaml": "^4.1.0",
-    "lefthook": "^1.11.14",
-    "ovsx": "^0.10.4",
+    "lefthook": "^1.13.6",
+    "ovsx": "^0.10.6",
     "tmlanguage-generator": "^0.6.4",
-    "typescript": "^5.8.3",
+    "typescript": "^5.9.3",
     "vscode-tmgrammar-test": "^0.1.3",
     "yaml": "^2.8.1"
   },
@@ -292,7 +292,10 @@
   },
   "dependencies": {
     "command-exists": "^1.2.9",
+    "@keqingmoe/tree-sitter": "^0.26.2",
+    "tree-sitter-nix": "github:nix-community/tree-sitter-nix",
     "vscode-languageclient": "^9.0.1",
-    "vscode-variables": "^1.0.1"
+    "vscode-variables": "^1.0.1",
+    "web-tree-sitter": "^0.20.8"
   }
 }
