--- a/package.json
+++ b/package.json
@@ -281,7 +281,7 @@
     "publish:ovsx": "ovsx publish *.vsix --pat '$OVS_PAT'",
     "publish:vsce": "vsce publish",
     "publish": "bun run package && bun run publish:vsce && bun run publish:ovsx",
-    "pretest": "bun run build --sourcemap && vscode-tmgrammar-snap 'syntaxes/tests/*.nix'",
+    "pretest": "bun run build --sourcemap && vscode-tmgrammar-snap 'syntax-tests/*.nix'",
     "test": "vscode-test",
     "lint": "bun x biome check --write src"
   },
