--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nix-ide",
   "displayName": "Nix IDE",
-  "description": "Nix language support - syntax highlighting, formatting, and error reporting.",
+  "description": "Full Nix language support with/without external language servers",
   "version": "0.5.5",
   "publisher": "jnoortheen",
   "icon": "images/icon.png",
